feat: 닉네임·계정상태·관리자 유저, R2 업로드, 멀티라운드 오디션
- DB V23/V24: nickname, account_status, 대소문자 무시 유니크, 공개 display_name 정책

- UserNicknameService, AuthResponse 확장, 슈퍼관리 유저 목록·검색·lookup

- 이미지 업로드를 R2(S3 호환) 경로로 정리, 문서 반영

- 멀티 라운드 제출·리뷰 UI 및 관련 API 연동

Made-with: Cursor